# speedify-py

./: .gitignore  LICENSE  Pipfile  README.md  connectify.py  pyproject.toml  requirements.txt  runtests.py  setup.py  speedify.py  speedifysettings.py  speedifyutil.py  tmp.py  utils.py
docs/: cli.rst  conf.py
docs/html/: .buildinfo  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  speedify.html  speedifysettings.html
docs/html/_modules/: index.html  speedify.html  speedifysettings.html
docs/html/_sources/: cli.rst.txt  index.rst.txt  speedify.rst.txt  speedifysettings.rst.txt
reference/: speedify_cli.md
sample/: connect_loop.py  loss_analysis.py  measure_speeds.py  monitor.py  port_forwarding.py  speedify_default.py  speedify_export.py  speedify_import.py  speedify_login.py  stat_callbacks_obs.py  stat_callbacks_sample.py  streamingtest.py  teams_export.py
tests/: README.md  conftest.py  test_integration_settings.py  test_integration_speedify.py  test_speedify.py  test_speedifysettings.py  test_unit_speedify.py
